Code review for Bug#43587 Putting event_scheduler=1 in init SQL file crashes mysqld